# jikan-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
benches/: benchmark.rs
examples/: basic_usage.rs  comprehensive_usage.rs
src/: client.rs  error.rs  lib.rs  rate_limiter.rs
src/endpoints/: anime.rs  characters.rs  clubs.rs  genres.rs  magazines.rs  manga.rs  mod.rs  people.rs  producers.rs  random.rs  reviews.rs  schedules.rs  search.rs  seasons.rs  top.rs  users.rs  watch.rs
src/models/: anime.rs  character.rs  club.rs  common.rs  genre.rs  magazine.rs  manga.rs  mod.rs  person.rs  producer.rs  schedule.rs  search.rs  seasonal.rs  top.rs  user.rs  watch.rs
